--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,28 @@
 {
   "redirects": [
     {
-      "source": "/:page.html",
-      "destination": "/:page",
+      "source": "/index.html",
+      "destination": "/",
+      "permanent": true
+    },
+    {
+      "source": "/about/our-history.html",
+      "destination": "/about/our-history",
+      "permanent": true
+    },
+    {
+      "source": "/services/interior.html",
+      "destination": "/services/interior",
+      "permanent": true
+    },
+    {
+      "source": "/services/exterior.html",
+      "destination": "/services/exterior",
+      "permanent": true
+    },
+    {
+      "source": "/contact.html",
+      "destination": "/contact",
       "permanent": true
     }
   ]
